# screenshot-mcp

./: .gitignore  Cargo.toml  LICENSE  README.md  README_ZH.md
.github/workflows/: ci.yml
src/: capture.rs  dxgi.rs  main.rs  mcp.rs  wgc.rs  window.rs
