[package]
name = "screenshot-mcp"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Windows screenshot MCP Server with OBS-style WGC capture"
repository = "https://github.com/zhaisoul/screenshot-mcp"

[dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Graphics_Dwm",
] }
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Gdi",
] }
kscreenshot = "0.1"
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
winreg = "0.56.0"
axum = "0.8.9"
tower-http = { version = "0.5", features = ["cors"] }
tokio = { version = "1.52.2", features = ["rt-multi-thread", "macros", "net", "sync"] }
futures-util = "0.3"
async-stream = "0.3"
